setup/k8s/microservice/configservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configservice
  namespace: microservice
  labels:
    app: configservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configservice
  template:
    metadata:
      labels:
        app: configservice
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8888"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: app
          image: ${IMAGE_REPO}/new-ms-config-service:${IMAGE_VERSION}
          ports:
            - containerPort: 8888
              name: http

          # --------------------------
          # 1️⃣ Load common config
          # --------------------------
        - name: alloy
          image: grafana/alloy:latest
          args: ["run", "/etc/alloy/alloy.alloy"]
          mountPath: /etc/alloy
            - name: varlog
            mountPath: /var/log
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config

---
apiVersion: v1
kind: Service
metadata:
  name: configservice
  namespace: microservice
  labels:
    app: configservice
spec:
  selector:
    app: configservice
  ports:
    - name: http
      port: 8888
      targetPort: http
  type: ClusterIP
