setup/k8s/microservice/discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
  labels:
    app: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8761"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: app
          image: $IMAGE_REPO/new-ms-discovery-service:$IMAGE_VERSION
          ports:
            - containerPort: 8761
              name: http
        - name: alloy
          image: grafana/alloy:main
          args: ["run", "/etc/alloy/alloy.alloy"]
          ports:
            - name: otlp-http
              containerPort: 4318
            - name: otlp-grpc
              containerPort: 4317
          volumeMounts:
            - name: alloy-config
              mountPath: /etc/alloy
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config
        - name: varlog
          hostPath:
            path: /var/log
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: discovery
  labels:
    app: discovery
spec:
  selector:
    app: discovery
  ports:
    - name: http
      port: 8761
      targetPort: http
  type: ClusterIP
