setup/k8s/microservice/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8085"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: app
          image: $IMAGE_REPO/new-ms-gateway-service:$IMAGE_VERSION
          ports:
            - containerPort: 8085
              name: http
        - name: alloy
          image: grafana/alloy:main
          args: ["run", "/etc/alloy/alloy.alloy"]
          ports:
            - name: otlp-http
              containerPort: 4318
            - name: otlp-grpc
              containerPort: 4317
          volumeMounts:
            - name: alloy-config
              mountPath: /etc/alloy
            - name: varlog
              mountPath: /var/log
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config
        - name: varlog
          hostPath:
            path: /var/log
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 8085
      targetPort: http
  type: ClusterIP
