setup/k8s/microservice/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: web
          image: ${IMAGE_REPO}/new-ms-webapp:${IMAGE_VERSION}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: microservice
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
